@@ -20,7 +20,7 @@ has 'encoder'      => is => 'lazy', isa => Object, builder => sub {
       ENCODING     => 'utf8',
       RELATIVE     => TRUE,
       INCLUDE_PATH => [ $self->templates->pathname ],
-      WRAPPER      => catfile( $self->config->default_skin, 'wrapper.tt' ), };
+      WRAPPER      => catfile( $self->config->skin, 'wrapper.tt' ), };
    my $template    =  Template->new( $args ) or throw $Template::ERROR;
 
    return $template;
